--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DODGE GAME</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="Retry.png">
 </head>
 <body>
     <canvas id="dataCanvas"></canvas>
